--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body{
     display: flex;
     flex-direction: column;
@@ -10,7 +11,9 @@ height:800px;
 border:solid black 2px;
 margin-inline:auto;
 display: grid;
-grid-template-columns: repeat(16,1fr);
+
+/* the first number in the repeat needs to be the square root of the number in the loop */
+grid-template-columns: repeat(64,1fr);
 }
 
 #sixteenBtn{
@@ -23,8 +26,8 @@ justify-content: center;
 }
 
 .createdBoxes{
-    transition: ease-out 2s;
-
+    transition: ease-out 5s;
+    border:1px solid black;
 }
 
 .createdBoxes:hover{
