--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ justify-content: space-around;
 .createdBoxes{
     transition: ease-out 5s;
     border:1px solid black;
+    background-color: white;
 }
 
 .createdBoxes:hover{
