--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,20 @@ justify-content: space-around;
 .createdBoxes:active{
     background-color: rgb(185, 185, 185);
 }
+
+#go{
+    background-color: rgb(105, 255, 105);
+    width:100px;
+    border-radius: 100px;
+    margin-inline:auto;
+    height:30px;
+}
+
+#go:hover{
+    background-color: rgb(0, 214, 0);
+    color:white;
+}
+
+#go:active{
+    background-color: green;
+}
