--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,33 @@ justify-content: space-around;
 #go:hover{
     background-color: rgb(0, 214, 0);
     color:white;
+    cursor:pointer;
 }
 
 #go:active{
     background-color: green;
+}
+
+.introText{
+    margin-inline: auto;
+    margin-top: auto;
+    margin-bottom:auto;
+    font-size:40px
+}
+
+#size{
+    background-color: green;
+    color:white;
+    border-radius: 20px;
+    transition: ease-in-out .2s;
+    width:200px;
+}
+
+#size:hover{
+    transform: scale(1.2);
+    background-color: rgb(0, 185, 0);
+}
+
+.btn{
+    border-radius: 20px;;
 }
