--- a/canvas-page/canvas.css
+++ b/canvas-page/canvas.css
@@ -88,18 +88,5 @@ justify-content: space-around;
 }
 
 .btn{
-    border-radius: 20px;
-    height:40px;
-}
-
-#likeBtn{
-    cursor:pointer;
-    display: flex;
-    align-items: center;
-    border:2px solid black;
-    border-radius: 20px;
-    padding:10px;
-    text-decoration: none;
-    color:white;
-    background-color: green;
+    border-radius: 20px;;
 }
