--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,17 @@
 
+*{
+    display: flex;
+    justify-content: center;
+}
+
+
 body{
     display: flex;
     flex-direction: column;
     gap:20px;
+    box-sizing: border-box;
+    width:900px;
+    justify-content: center;
 }
 
 #boxContainer{
@@ -90,6 +99,21 @@ justify-content: space-around;
 .btn{
     border-radius: 20px;
     height:40px;
+    transition: all .2s;
+    display: flex;
+    align-items: center;
+}
+
+.btn:hover{
+    transform: scale(1.1);
+    background-color: rgb(0,0,0,0.5);
+    color:white;
+    cursor:pointer;
+}
+
+.btn:disabled:hover{
+    background-color:rgb(255, 76, 76);
+    transform: scale(1);
 }
 
 #likeBtn{
