--- a/canvas-page/canvas.css
+++ b/canvas-page/canvas.css
@@ -102,6 +102,7 @@ justify-content: space-around;
     padding:10px;
     border-radius: 10px;
     transition: ease-in-out .2s;
+    cursor: pointer;
 }
 
 .bucket:hover{
